--- a/hbd/Krishna/style.css
+++ b/hbd/Krishna/style.css
@@ -8,17 +8,19 @@ body {
     margin: 0;
     background: #020202;
     min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 canvas {
-    display:block
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
 }
 
 div {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     color: #fff;
     font-family: "Source Sans Pro";
     font-size: 3em;
@@ -26,6 +28,7 @@ div {
     -webkit-user-select: none;
     user-select: none;
     text-align: center;
+    margin: 15px 3px;
 }
 
 img {
@@ -33,17 +36,17 @@ img {
     border-radius: 50%;
     background-color: lightblue;
     box-shadow: 0 0 15px 2px yellow;
+    margin: 10px 3px;
 }
 
 img:hover {
     box-shadow: 0 0 250px 2px white;
 }
 
-#text {
-    border: 5px solid white;
-    border-radius: 50%;
-    background-color: lightblue;
-    box-shadow: 0 0 15px 2px yellow;
-    padding: 15px;
-    font-size: 0.3em;
+#hbd {
+    margin-top: 25px;
+}
+
+p {
+    margin: 0;
 }
